# minsp

./: .gitignore  README.md  acknowledgements.html  genindex.html  getting_started.html  index.html  installation.html  minsp.core.html  minsp.html  minsp.mo.html  minsp.pus.html  minsp.utils.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: python-docs.yml  python-release.yml  python-test.yml
_sources/: getting_started.rst.txt  index.rst.txt  minsp.core.rst.txt  minsp.mo.rst.txt  minsp.pus.rst.txt  minsp.rst.txt  minsp.utils.rst.txt  modules.rst.txt
docs/source/: conf.py
minsp/: __init__.py  core.py  mo.py  pus.py
tests/: test_space_packet.py  test_space_packet_assembler.py
