[tool.poetry]
name = "minsp"
version = "0.1.0"
description = "minimalistic implementation of the Space Packet specification from the CCSDS Space Packet Protocol standard"
authors = ["Nuno Carvalho <narcarvalho@gmail.com>"]
license = "iLICENSE.txt"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bitstruct = "^8.19.0"
pytest = "^8.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pylint = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
